force-app/main/default/objects/Support_Portal__mdt/Support_Portal__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Support Portal. Ships with package defaults; admins can create custom records to override behavior.</description>
    <label>Support Portal Setting</label>
    <pluralLabel>Support Portal Settings</pluralLabel>
</CustomObject>