force-app/main/default/objects/Support_Portal__mdt/fields/Case_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Case_Visibility__c</fullName>
    <description>Controls which Cases a portal user can see. User_Only shows only their Cases. Company_Wide shows all Cases on their Account.</description>
    <inlineHelpText>User_Only: portal users see only Cases they submitted. Company_Wide: users see all Cases on their Account (useful for team visibility).</inlineHelpText>
    <label>Case Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User_Only</fullName>
                <default>true</default>
                <label>User Only</label>
            </value>
            <value>
                <fullName>Company_Wide</fullName>
                <label>Company Wide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>