force-app/main/default/objects/Support_Portal__mdt/fields/Customer_Account_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_RecordType__c</fullName>
    <description>DeveloperName of the Account RecordType used for portal customer accounts (e.g., Customer, Business_Account).</description>
    <inlineHelpText>Enter the DeveloperName (API Name) of the Account Record Type to assign when creating new portal customer accounts. Leave blank to use the org default. Example: Customer_Account</inlineHelpText>
    <label>Customer Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>