force-app/main/default/objects/Support_Portal__mdt/fields/Customer_Contact_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_RecordType__c</fullName>
    <description>DeveloperName of the Contact RecordType used for portal customer contacts (e.g., Portal_User, Customer_Contact). Leave blank to use the default Record Type.</description>
    <inlineHelpText>Enter the DeveloperName (API Name) of the Contact Record Type to assign when creating new portal contacts. Leave blank to use the org default. Example: Portal_User</inlineHelpText>
    <label>Customer Contact Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>