force-app/main/default/objects/Support_Portal__mdt/fields/Email_On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Email_On_Behalf_Of__c</fullName>
    <description>OrgWideEmailAddress Id used as the From address for portal emails (welcome, password reset).</description>
    <inlineHelpText>Paste the 18-character Id of an Org-Wide Email Address to use as the From address for portal emails (welcome, password reset). Find it under Setup > Org-Wide Email Addresses. Leave blank to use the default.</inlineHelpText>
    <label>Email On Behalf Of</label>
    <length>18</length>
    <type>Text</type>
</CustomField>