force-app/main/default/objects/Support_Portal__mdt/fields/Enable_Agentforce_Chat__c.field-meta.xml
<CustomField>
    <fullName>Enable_Agentforce_Chat__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to show the Agentforce chat widget on portal pages.</description>
    <inlineHelpText>When checked, the chat widget appears on portal pages. The chat mode (Built-in, Messaging for Web, or AI Assistant) is configured in Portal Settings within the portal admin UI.</inlineHelpText>
    <label>Enable Agentforce Chat</label>
    <type>Checkbox</type>
</CustomField>