force-app/main/default/objects/Support_Portal__mdt/fields/Portal_Fields_Config__c.field-meta.xml
<CustomField>
    <fullName>Portal_Fields_Config__c</fullName>
    <label>Portal Fields Config</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON configuration for portal field visibility. Controls which fields appear on case forms. E.g. {"showPriority":true,"showCategory":true,"showType":false,"customFields":[]}</description>
    <inlineHelpText>Advanced: JSON controlling which fields appear on case forms. Normally managed from Portal Settings in the admin UI. Only edit here if you need to override the UI-managed config.</inlineHelpText>
</CustomField>