force-app/main/default/objects/Support_Portal__mdt/fields/Product_Options__c.field-meta.xml
<CustomField>
    <fullName>Product_Options__c</fullName>
    <label>Product Options</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Comma-separated product names shown in the portal product dropdown. E.g. "Radar,Canvas,AgentPM,Resolve"</description>
    <inlineHelpText>Comma-separated list of product names for the portal product dropdown. Example: Radar,Canvas,AgentPM,Resolve. Also editable from Portal Settings in the admin UI.</inlineHelpText>
</CustomField>