force-app/main/default/objects/Support_Portal__mdt/fields/Session_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration_Minutes__c</fullName>
    <defaultValue>30</defaultValue>
    <description>How long a portal session remains active (in minutes) before requiring re-login.</description>
    <inlineHelpText>Number of minutes a portal session stays active before the user must log in again. Default is 30. Sessions are extended on each page action.</inlineHelpText>
    <label>Session Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>