force-app/main/default/objects/Support_Portal__mdt/fields/Show_Admin_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_Admin_In_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master switch: when true, Portal Admin / Super Admin users can see the admin section in the portal. When false, admin pages are hidden regardless of portal JSON config. Toggle ON in Salesforce Setup when admins need to configure portal settings, then toggle OFF for safety.</description>
    <inlineHelpText>Master switch for the portal admin section. Check to let Portal Admins and Super Admins access admin pages. Uncheck to hide admin pages from all users. Toggle ON during setup, OFF when done for safety.</inlineHelpText>
    <label>Show Admin In Portal</label>
    <type>Checkbox</type>
</CustomField>