force-app/main/default/objects/Support_Portal__mdt/fields/Show_Product_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Product_Field__c</fullName>
    <label>Show Product Field</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Show the Product selector on the case creation form.</description>
    <inlineHelpText>When checked, the Product dropdown appears on the New Case form so users can select which product their issue relates to. Uncheck to hide it.</inlineHelpText>
</CustomField>