force-app/main/default/objects/Support_Portal__mdt/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Support contact email displayed in the portal.</description>
    <inlineHelpText>Email address shown on the portal Contact Us page and in the footer. Example: support@yourcompany.com</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>