force-app/main/default/objects/Support_Portal__mdt/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <description>Support phone number displayed in the portal.</description>
    <inlineHelpText>Phone number shown on the portal Contact Us page and in the footer. Leave blank to hide the phone field.</inlineHelpText>
    <label>Support Phone</label>
    <type>Phone</type>
</CustomField>